; ModuleID = '/home/carl/AnghaBench/git/extr_trailer.c_add_arg_to_input_list.c'
source_filename = "/home/carl/AnghaBench/git/extr_trailer.c_add_arg_to_input_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.trailer_item = type { i32 }
%struct.arg_item = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.trailer_item*, %struct.arg_item*)* @add_arg_to_input_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_arg_to_input_list(%struct.trailer_item* %0, %struct.arg_item* %1) #0 {
  %3 = alloca %struct.trailer_item*, align 8
  %4 = alloca %struct.arg_item*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.trailer_item*, align 8
  store %struct.trailer_item* %0, %struct.trailer_item** %3, align 8
  store %struct.arg_item* %1, %struct.arg_item** %4, align 8
  %7 = load %struct.arg_item*, %struct.arg_item** %4, align 8
  %8 = getelementptr inbounds %struct.arg_item, %struct.arg_item* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @after_or_end(i32 %10)
  store i32 %11, i32* %5, align 4
  %12 = load %struct.arg_item*, %struct.arg_item** %4, align 8
  %13 = call %struct.trailer_item* @trailer_from_arg(%struct.arg_item* %12)
  store %struct.trailer_item* %13, %struct.trailer_item** %6, align 8
  %14 = load i32, i32* %5, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %22

16:                                               ; preds = %2
  %17 = load %struct.trailer_item*, %struct.trailer_item** %6, align 8
  %18 = getelementptr inbounds %struct.trailer_item, %struct.trailer_item* %17, i32 0, i32 0
  %19 = load %struct.trailer_item*, %struct.trailer_item** %3, align 8
  %20 = getelementptr inbounds %struct.trailer_item, %struct.trailer_item* %19, i32 0, i32 0
  %21 = call i32 @list_add(i32* %18, i32* %20)
  br label %28

22:                                               ; preds = %2
  %23 = load %struct.trailer_item*, %struct.trailer_item** %6, align 8
  %24 = getelementptr inbounds %struct.trailer_item, %struct.trailer_item* %23, i32 0, i32 0
  %25 = load %struct.trailer_item*, %struct.trailer_item** %3, align 8
  %26 = getelementptr inbounds %struct.trailer_item, %struct.trailer_item* %25, i32 0, i32 0
  %27 = call i32 @list_add_tail(i32* %24, i32* %26)
  br label %28

28:                                               ; preds = %22, %16
  ret void
}

declare dso_local i32 @after_or_end(i32) #1

declare dso_local %struct.trailer_item* @trailer_from_arg(%struct.arg_item*) #1

declare dso_local i32 @list_add(i32*, i32*) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
